# MPEV

./: CMakeLists.txt  MPEV.pro  ONLINE_BUILD.md  README.md  build.bat
.github/workflows/: build.yml
.github/workflows/.github/workflows/: build.yml
src/: contextmenu.cpp  contextmenu.h  database.cpp  database.h  emailmodel.cpp  emailmodel.h  emailparser.cpp  emailparser.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  timeline.cpp  timeline.h
